-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.3.1, Qt Creator 2.4.0
-
Windows Vista x64
-
50c3e774bb4d2e790fb44250d6a6a853d9516858
- Run Creator.
- Open project qtcreator.pro.
- Set up a shadow build directory which exists, but use wrong letter case, e.g. I use "C:\APPs\Creator-master-work" while the existing directory is "C:\Apps\Creator-master-work".
- If not done yet, build Creator in the shadow build directory.
- Run the project.
Creator will show up with a blank welcome screen. The controlling Creator will show a warning: "file:///C:/APPs/Creator-master-work/share/qtcreator/welcomescreen/welcomescreen.qml: File name case mismatch"
- relates to
-
QTBUG-28230 Creator from version 351 does not have Welcome Page on Windows
-
- Closed
-
-
QTCREATORBUG-5777 Welcome screen empty when launched from last installer page.
-
- Closed
-
-
QTCREATORBUG-4592 Qt Quick Application creates "File name case mismatch"
-
- Closed
-
-
QTCREATORBUG-5965 qmlviewer doesn't show main.qml correctly
-
- Closed
-
- resulted from
-
QTBUG-17529 QtDeclarative fails with 'File name case mismatch' if working directory is incorrectly capitalized (Windows)
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-6126 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
40999,4 | WelcomeScreen: Show content even for incorrectly capitalized application dir | 2.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
41115,1 | QmlDesigner.PropertyEditor: normalize applicationDirPath() | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
41116,1 | QmlDesigner.PropertyEditor: normalize applicationDirPath() | 2.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |