QmlDesigner.PropertyEditor: normalize applicationDirPath()

This is needed on Windows for QML since QML always
checks for capitalization.

Task-number: QTCREATORBUG-6126
Task-number: QTBUG-28230
Change-Id: I011464288f6052bfe19452b8ce555d6c462e15dd
Reviewed-by: Eike Ziller <eike.ziller@digia.com>